2007-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/ps.c (WritePSImage): Improved Postscript writer
	performance.

2007-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (AllocateImageProfileIterator): New function to
	allocate an image profile iterator.
	(DeallocateImageProfileIterator): New function to deallocate an
	image profile iterator.
	(NextImageProfile): New function to advance the image profile
	iterator to the next profile.
	* magick/image.h (Image): Profiles are now stored in a generic
	container.  As planned years ago, the color_profile, iptc_profile,
	generic_profile, and generic_profiles members are now removed.

2007-09-01  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/bmp.c Ability to read true color bitmap with invalid palette size
	like other readers do.

2007-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (ClonePixelCacheMethods): Remove DLL export.
	(DestroyCacheInfo): Remove DLL export.
	(GetCacheInfo): Remove DLL export.
	(ReferenceCache): Remove DLL export.

2007-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType): More tweaks to obtain the desired
	behavior when converting to a bilevel image.
	* coders/tiff.c (WriteTIFFImage): Logic which decided the output
	subformat to write was too convoluted to understand, and in fact
	palette images were not be written sometimes when they should be
	(bug added on 2007-08-19).  Deleted the convoluted code and
	replaced with a different design which should be more correct and
	flexible.
	(ReadTIFFImage): Decided to read bilevel TIFF using a colormap
	since there are significant internal advantages to doing so.
	However, the writer is carefully designed to output normal bilevel
	TIFF so this should not annoy TIFF users.
	* magick/constitute.c (ImportImagePixelArea): Re-wrote grayscale
	pseudoclass import to be more efficient and more tidy.

2007-08-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>