@@ -21,6 +21,18 @@
 </tr>
 </table>
 <p>
+2007-09-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/bin/delegates.mgk: Adjust quoting to Ghostscript arguments
+        so that Ghostscript DLL is passed correct commands.
+  <LI> config/delegates.mgk.in: Adjust quoting to Ghostscript arguments
+        so that Ghostscript DLL is passed correct commands.
+  <LI> configure.ac: Provide defaults for GSColorAlphaDevice and GSGrayDevice.
+  <LI> magick/nt_base.c (NTGhostscriptGetString): Support "GPL Ghostscript".
+
+</UL>
+<p>
 2007-09-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
