@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 8  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;11000900">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20070728;11571000">
+	<META NAME="CHANGED" CONTENT="20070903;19462200">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically making it suitable for Web applications.  You can also resize, rotate, sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic, WebMagick, Web Magic, visualization, image processing, software development, simulation, image, software, AniMagick, Animagic,  Magick++">
 	<STYLE>
@@ -200,7 +200,8 @@ Unix-like system, including Linux. It also runs under <A HREF="windows.html">Win
 			</TD>
 			<TD WIDTH=749>
 				<P>TIFF format support is completely re-written to support all
-				subformats and an arbitrary number of sample bits.</P>
+				subformats, an arbitrary number of sample bits, floating point
+				types, and improved performance.</P>
 			</TD>
 		</TR>
 		<TR VALIGN=TOP>
